--- a/index.html
+++ b/index.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Calculator</title>
   </head>
   <body>
+    <div class="main">
+      <div class="calculator">
+        <div class="row screen">
+          <h1 class="result">500</h1>
+        </div>
+        <div class="buttons">
+          <div class="row">
+            <div class="button">
+              <h3 class="txt">AC</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">%</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">+/-</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">/</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="button">
+              <h3 class="txt">7</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">8</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">9</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">x</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="button">
+              <h3 class="txt">4</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">5</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">6</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">-</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="button">
+              <h3 class="txt">1</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">2</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">3</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">+</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="button">
+              <h3 class="txt">0</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">0</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">.</h3>
+            </div>
+            <div class="button">
+              <h3 class="txt">=</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
