--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
         <div class="row screen">
           <h1 class="result">500</h1>
         </div>
+        <div class="divider"></div>
         <div class="buttons">
           <div class="row">
-            <div class="button">
-              <h3 class="txt">AC</h3>
+            <div class="button white">
+              <h3 class="txt blck-txt">AC</h3>
             </div>
-            <div class="button">
-              <h3 class="txt">%</h3>
+            <div class="button white">
+              <h3 class="txt blck-txt">%</h3>
             </div>
-            <div class="button">
-              <h3 class="txt">+/-</h3>
+            <div class="button white">
+              <h3 class="txt blck-txt">+/-</h3>
             </div>
-            <div class="button">
+            <div class="button white">
               <h3 class="txt">/</h3>
             </div>
           </div>
@@ -38,7 +39,7 @@
             <div class="button">
               <h3 class="txt">9</h3>
             </div>
-            <div class="button">
+            <div class="button red">
               <h3 class="txt">x</h3>
             </div>
           </div>
@@ -52,7 +53,7 @@
             <div class="button">
               <h3 class="txt">6</h3>
             </div>
-            <div class="button">
+            <div class="button red">
               <h3 class="txt">-</h3>
             </div>
           </div>
@@ -66,7 +67,7 @@
             <div class="button">
               <h3 class="txt">3</h3>
             </div>
-            <div class="button">
+            <div class="button red">
               <h3 class="txt">+</h3>
             </div>
           </div>
@@ -80,7 +81,7 @@
             <div class="button">
               <h3 class="txt">.</h3>
             </div>
-            <div class="button">
+            <div class="button red">
               <h3 class="txt">=</h3>
             </div>
           </div>
