I have changed the calculator so that it now looks 3d. I have altered the button gradients so that they swap on click. I need to do the gradient swap for the white and red buttons. Then I can add some javascript.

--- a/index.html
+++ b/index.html
@@ -9,80 +9,79 @@
   </head>
   <body>
     <div class="main">
-      <div class="calculator">
-        <div class="row screen">
-          <h1 class="result">500</h1>
-        </div>
-        <div class="divider"></div>
-        <div class="buttons">
-          <div class="row">
-            <div class="button white">
-              <h3 class="txt blck-txt">AC</h3>
-            </div>
-            <div class="button white">
-              <h3 class="txt blck-txt">%</h3>
-            </div>
-            <div class="button white">
-              <h3 class="txt blck-txt">+/-</h3>
-            </div>
-            <div class="button white">
-              <h3 class="txt">/</h3>
-            </div>
+      <div class="border">
+        <div class="calculator">
+          <div class="row screen">
+            <h1 class="result">500</h1>
           </div>
-          <div class="row">
-            <div class="button">
-              <h3 class="txt">7</h3>
+          <div class="divider"></div>
+          <div class="buttons">
+            <div class="row">
+                <div class="button white">
+                  <h3 class="txt blck-txt">AC</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">+/-</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">%</h3>
+                </div>
+                <div class="button red">
+                  <h3 class="txt">/</h3>
+                </div>
             </div>
-            <div class="button">
-              <h3 class="txt">8</h3>
+            <div class="row">
+                <div class="button">
+                  <h3 class="txt">7</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">8</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">9</h3>
+                </div>
+                <div class="button red">
+                  <h3 class="txt">x</h3>
+                </div>
+              </div>
+            <div class="row">
+                <div class="button">
+                  <h3 class="txt">4</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">5</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">6</h3>
+                </div>
+                <div class="button red">
+                  <h3 class="txt">+</h3>
+                </div>
             </div>
-            <div class="button">
-              <h3 class="txt">9</h3>
+            <div class="row">
+                <div class="button">
+                  <h3 class="txt">1</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">2</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">3</h3>
+                </div>
+                <div class="button red">
+                  <h3 class="txt">+</h3>
+                </div>
             </div>
-            <div class="button red">
-              <h3 class="txt">x</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="button">
-              <h3 class="txt">4</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">5</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">6</h3>
-            </div>
-            <div class="button red">
-              <h3 class="txt">-</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="button">
-              <h3 class="txt">1</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">2</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">3</h3>
-            </div>
-            <div class="button red">
-              <h3 class="txt">+</h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="button">
-              <h3 class="txt">0</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">0</h3>
-            </div>
-            <div class="button">
-              <h3 class="txt">.</h3>
-            </div>
-            <div class="button red">
-              <h3 class="txt">=</h3>
+            <div class="row">
+                <div class="button dbl-button">
+                  <h3 class="txt">0</h3>
+                </div>
+                <div class="button">
+                  <h3 class="txt">.</h3>
+                </div>
+                <div class="button red">
+                  <h3 class="txt">=</h3>
+                </div>
             </div>
           </div>
         </div>
