Some minor style updates to the color of the calculator, the addition of some text elements, and a size adjustment on the calculator screen.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.svg">
     <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
     <link rel="stylesheet" type="text/css" href="reset.css">
@@ -9,10 +10,16 @@
   </head>
   <body>
     <div class="main">
+      <div class="calc">
+        <h1 class="title">The Calculator</h1>
+        <h3 class="sub">Simple.</h3>
+        <h3 class="sub">Fast.</h3>
+        <h3 class="sub">Effective.</h3>
+      </div>
       <div class="border">
         <div class="calculator">
           <div class="row screen">
-            <h1 class="result">500</h1>
+            <h2 class="result">0</h2>
           </div>
           <div class="divider"></div>
           <div class="buttons">
