The display now shows clicked buttons. Next step is to prevent the content from going off of the screen.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="border">
         <div class="calculator">
             <div class="row screen">
-              <h2 class="result">0</h2>
+              <h2 class="result"><span id="display"></span></h2>
             </div>
           <div class="divider"></div>
-          <div class="buttons">
+          <div id="buttons" class="buttons">
             <div class="row">
                 <div class="button white">
                   <h3 class="txt blck-txt">AC</h3>
