--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <div id="buttons" class="buttons">
             <div class="row">
                 <div class="button white">
-                  <h3 class="txt blck-txt">AC</h3>
+                  <h3 id="clear" class="txt blck-txt">AC</h3>
                 </div>
                 <div class="button">
-                  <h3 class="txt">+/-</h3>
+                  <h3 id="plusMinus" class="txt">&plusmn;</h3>
                 </div>
                 <div class="button">
-                  <h3 class="txt">%</h3>
+                  <h3 id="percent" class="txt">&percnt;</h3>
                 </div>
                 <div class="button red">
-                  <h3 class="txt">/</h3>
+                  <h3 id="divide" class="txt">&divide;</h3>
                 </div>
             </div>
             <div class="row">
@@ -48,7 +48,7 @@
                   <h3 class="txt">9</h3>
                 </div>
                 <div class="button red">
-                  <h3 class="txt">x</h3>
+                  <h3 id="times" class="txt">&times;</h3>
                 </div>
               </div>
             <div class="row">
@@ -62,7 +62,7 @@
                   <h3 class="txt">6</h3>
                 </div>
                 <div class="button red">
-                  <h3 class="txt">+</h3>
+                  <h3 id="plus" class="txt">&plus;</h3>
                 </div>
             </div>
             <div class="row">
@@ -76,7 +76,7 @@
                   <h3 class="txt">3</h3>
                 </div>
                 <div class="button red">
-                  <h3 class="txt">+</h3>
+                  <h3 id="minus" class="txt">&minus;</h3>
                 </div>
             </div>
             <div class="row">
@@ -87,7 +87,7 @@
                   <h3 class="txt">.</h3>
                 </div>
                 <div class="button red">
-                  <h3 class="txt">=</h3>
+                  <h3 id="equal" class="txt">&equals;</h3>
                 </div>
             </div>
           </div>
