I am going to save the first and second number to an object in HTML. Then depending on the current operator, I will formulate an equation with those two numbers.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script>
+      var data = {
+          num1: '',
+          num2: ''
+        };
+    </script>
     <title>Calculator</title>
   </head>
   <body>
