I don't like where this is currently. I am going to define all of my functions first and then come at this fresh. The plan is to have something clean and easy to use.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
       let numbers = {
-          num1: '',
-          num2: ''
+          x: '',
+          y: '',
+          second: false
         };
     </script>
     <title>Calculator</title>
