Refactoring code to made it as concise and easy to read as possible.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
-      let numbers = {
-          x: '',
-          y: '',
-          second: false
+      const obj = {
+          num1: '',
+          num2: '',
+          result: ''
         };
     </script>
     <title>Calculator</title>
@@ -101,6 +101,6 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
