Now the first and second number are saved as numbers in the data object. When clicking the addition button, firstEntry is set to false and the object is returned to prevent the symbol from showing on the screen.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script>
-      const obj = {
-          num1: '',
-          num2: '',
-          result: ''
-        };
-    </script>
     <title>Calculator</title>
   </head>
   <body>
@@ -101,6 +94,6 @@
         </div>
       </div>
     </div>
-    <script src="test.js"></script>
+    <script src="refactor.js"></script>
   </body>
 </html>
