--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="border">
         <div class="calculator">
             <div class="row screen">
+              <div id="operator"></div>
               <h2 class="result"><span id="display"></span></h2>
             </div>
           <div class="divider"></div>
