Once again I have reformatted the code, now using multiple switch functions. Trying to find a way to set the first number to the result of num1 and num2 in case there are more numbers.

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <div id="buttons" class="buttons">
             <div class="row">
                 <div class="button white">
-                  <h3 id="clear" class="txt blck-txt">AC</h3>
+                  <h3 id="clear" class="operator">AC</h3>
                 </div>
                 <div class="button">
-                  <h3 id="plusMinus" class="txt">&plusmn;</h3>
+                  <h3 id="plusMinus" class="operator">&plusmn;</h3>
                 </div>
                 <div class="button">
-                  <h3 id="percent" class="txt">&percnt;</h3>
+                  <h3 id="percent" class="operator">&percnt;</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="divide" class="txt">&divide;</h3>
+                  <h3 id="divide" class="operator">&divide;</h3>
                 </div>
             </div>
             <div class="row">
@@ -49,7 +49,7 @@
                   <h3 class="txt">9</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="times" class="txt">&times;</h3>
+                  <h3 id="times" class="operator">&times;</h3>
                 </div>
               </div>
             <div class="row">
@@ -63,7 +63,7 @@
                   <h3 class="txt">6</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="plus" class="txt">&plus;</h3>
+                  <h3 id="plus" class="operator">&plus;</h3>
                 </div>
             </div>
             <div class="row">
@@ -77,7 +77,7 @@
                   <h3 class="txt">3</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="minus" class="txt">&minus;</h3>
+                  <h3 id="minus" class="operator">&minus;</h3>
                 </div>
             </div>
             <div class="row">
@@ -88,13 +88,13 @@
                   <h3 class="txt">.</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="equal" class="txt">&equals;</h3>
+                  <h3 id="equal" class="operator">&equals;</h3>
                 </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="refactor.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
