Now you can add multiple numbers. When you click '=' everything will be reset but the answer will still show on the screen. Next step is to convert longer numbers to scientific notation. Also I need to prevent numbers that are too long from appearing. When an operator is selected it will need to be highlighted instead of there being an operator on the screen.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <h3 class="txt">.</h3>
                 </div>
                 <div class="button red">
-                  <h3 id="equal" class="operator">&equals;</h3>
+                  <h3 id="equal" class="equal">&equals;</h3>
                 </div>
             </div>
           </div>
