--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div id="buttons" class="buttons">
             <div class="row">
                 <div class="button white">
-                  <h3 id="clear" class="operator">AC</h3>
+                  <h3 id="clear" class="equal">AC</h3>
                 </div>
                 <div class="button">
                   <h3 id="plusMinus" class="operator">&plusmn;</h3>
