I fixed an issue with the first number being overwritten. I have alos made the plusMinus function work. The final two touches will be setting up the percent function and converting long results into scientific notation.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <h3 id="clear" class="equal">AC</h3>
                 </div>
                 <div class="button">
-                  <h3 id="plusMinus" class="operator">&plusmn;</h3>
+                  <h3 id="plusMinus">&plusmn;</h3>
                 </div>
                 <div class="button">
                   <h3 id="percent" class="operator">&percnt;</h3>
